lexer_parser/src/test/exempleFile/miniJaja/success/methVoid.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methVoid{

    void myMeth(int x, boolean y){
        int a = 5;
    };

	main {

	}
}