lexer_parser/src/test/exempleFile/miniJaja/fail/methWrongType.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methWrongType{

    double myMeth(int x, boolean y){
        int a = 5;

    };

	main {

	}
}